# pachyderm-pycon

./: LICENSE
deploy/: deploy-bucket.sh  deploy-gke.sh  deploy-pachyderm.sh
first-example/: pipeline.json
second-example/: first_pipeline.json  second_pipeline.json
third-example/: datum1.json  datum2.json
third-example/first_pipeline/: Dockerfile  first_pipeline.json
third-example/first_pipeline/src/: data_ingress.py
third-example/second_pipeline/: Dockerfile  second_pipeline.json
third-example/second_pipeline/src/: data_process.py  pyproject.toml
