[tool.poetry]
name = "first_pipeline"
version = "0.1.0"
description = ""
authors = ["Guilherme Caminha <gpkc@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.2"
numpy = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
